updated Users role Service